name:          async-tutorial
version:       0.1.0.0
license:       MIT
copyright:     2020 Niklas Hambüchen <mail@nh2.me>
build-type:    Simple
cabal-version: >= 1.8

executable tutorial
  main-is:             app/Main.hs
  build-depends:
      base             >= 4 && < 5
    , async
    , text
    , say

  ghc-options:
    -Wall -threaded -with-rtsopts=-N
